# algo-ops

./: .gitignore  LICENSE  README.md  conda.yaml  conda_osx.yaml  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-conda.yml
algo_ops/dependency/: sys_util.py  tester_util.py
algo_ops/ops/: cv.py  op.py  text.py
algo_ops/paraloop/: paraloop.py
algo_ops/paraloop/test/: test_paraloop.py
algo_ops/pickleable_object/: pickleable_object.py
algo_ops/pickleable_object/test/: test_pickleable_object.py
algo_ops/pipeline/: cv_pipeline.py  pipeline.py
algo_ops/plot/: plot.py
algo_ops/test/: test_cv_pipeline.py  test_framework.py
